Fix: Transcription fixed
